{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "8aed7a38-8521-4769-ac80-1f03a2ca02de",
            "actions": [
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "d24ff686-4e26-4ff6-9c96-84a1d198bd31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "SlowTap(duration=0.01,pressPoint=0.01)"
                },
                {
                    "name": "SuperTeleport",
                    "type": "Button",
                    "id": "a958d84d-dfe2-4c88-9f31-b0d3dc20087d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "SlowTap(duration=0.01,pressPoint=0.01)"
                },
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "6749038f-3e2e-4d9e-a813-893a0a57d9f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraMovement",
                    "type": "PassThrough",
                    "id": "42e25212-7e24-41cc-8ae4-ca16227d9290",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextLine",
                    "type": "Button",
                    "id": "63060bb6-8696-493c-a80d-bf80379f4f70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenBigMap",
                    "type": "Button",
                    "id": "fefd6011-8fe1-4070-99e2-e57560f5348e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartConversation",
                    "type": "Button",
                    "id": "f50f15f4-fdb9-45fa-8676-ab391a26ffbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AbortAimming",
                    "type": "Button",
                    "id": "a6300717-2ee3-48ec-a3ed-5e1b3b271e6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9a26ee05-2e29-46d5-b973-eff85e761c7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "InstructionMenu",
                    "type": "Button",
                    "id": "88fc33d5-ffe1-48c3-af17-3f7af607fc72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b507eb8-7564-47ce-81d7-ae766c861eb9",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be5cf101-e9d4-4602-8548-3fe22fd77e03",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "4f9212c5-4cca-47b5-be82-d72f418158e6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bf86cf83-b804-4e48-aca2-1282fbe40da7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8391a6a4-5465-4f1a-b3dc-1ccfd9519de1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a7144d6c-ea15-44b5-af7b-5f7663a1add4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d0c72577-e595-4d70-ad53-b8d34f4c2cec",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b9303621-6881-4c7c-8352-6844f82f3c07",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3343568f-66a4-4898-8383-2a40dbb49710",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenBigMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5abd8975-960a-4b62-8872-b718b1fcedc9",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenBigMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "886f81fb-c5c5-45af-9b0f-35b83ab1e34a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuperTeleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "456818a9-181a-414c-b6e6-e6e9f6c3ff21",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartConversation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "255fade7-8e33-43d3-b729-9d98b68fe588",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartConversation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2e27797-c08a-4d9c-85cd-ddbb2eb57dbe",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbortAimming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdae1028-0ae8-49a7-938a-73146f378bee",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbortAimming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31f0fb72-2751-41d7-ac1f-ff08876a7913",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f831ce43-f61d-4361-be08-31326e5ad98d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7be8983-676b-4e8f-939d-436ff4f01414",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d17e763-331b-4804-a4e7-c1c57063dd0a",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InstructionMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db451810-c5cb-40c8-8a63-bbbb2acd0116",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InstructionMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "03d94444-ea8d-443d-b7b2-ba71dd721415",
            "actions": [
                {
                    "name": "ToggleDebug",
                    "type": "Button",
                    "id": "6ce10f88-789c-48eb-9959-d2cb5f228f01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ReturnDebug",
                    "type": "Button",
                    "id": "dac3b100-11bf-49a9-b7de-c2aba27b4102",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ea066ba-87b9-4429-b28e-322e35734268",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "129f2692-cbfb-4456-84db-205c8d0a00cc",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "96ca4498-2f20-4bc9-a41f-65a75384c922",
            "actions": [
                {
                    "name": "OpenUIPage",
                    "type": "Button",
                    "id": "431729bd-2424-4323-a1f5-b532c9d5e6dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "664664f2-6118-4499-945e-3871cd37edee",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenUIPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38a3e01c-e271-4776-ae72-72348cbcb49d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenUIPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}